<resources>
    <string name="app_name">Project_Android_App</string>
    <string name="select_server">Select Server</string>
    <string name="time_interval">Time Interval for data</string>
    <string name="connect">Connect</string>
    <string name="server_ip">Server IP</string>
    <string name="connect_to_server">CONNECT TO SERVER</string>
    <string name="exit">Exit</string>
    <string name="port">Port</string>
    <string name="automatic_gps">Automatic GPS</string>
    <string name="number_of_vectors_to_send">Number of vectors to send:</string>
    <string name="seconds">Seconds</string>
    <string name="set">SET</string>
    <string name="back">BACK</string>
    <string name="manual_mode">Manual Mode</string>
    <string name="play_sound">Play sound</string>
    <string name="stop_sound">Stop sound</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="disconnect">Disconnect</string>
</resources>