<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="1500dp"
        android:layout_height="1000dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/time_interval"
            android:src="@drawable/wallpaper_networks" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80000000" /> <!-- 50% black overlay -->
    </FrameLayout>


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Android App" />


    <EditText
        android:id="@+id/editTextSelectServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:minHeight="48dp"
        android:autofillHints=""
        android:textColor="@color/black"
        android:textColorHint="#B1B0B0"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/server_ip"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.257" />

    <EditText
        android:id="@+id/editTextPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:padding="8dp"
        android:minHeight="48dp"
        android:autofillHints=""
        android:textColor="@color/black"
        android:textColorHint="#B1B0B0"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/port"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/editTextSelectServer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextSelectServer"
        app:layout_constraintTop_toBottomOf="@+id/editTextSelectServer" />

    <Button
        android:id="@+id/connectButton"
        android:onClick="connectClicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/connect"
        app:layout_constraintEnd_toEndOf="@+id/editTextPort"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/editTextPort"
        app:layout_constraintTop_toBottomOf="@+id/editTextPort" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:maxWidth="200dp"
        android:maxHeight="100dp"
        android:text="@string/connect_to_server"
        android:textColor="#23AEE0"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextSelectServer"
        app:layout_constraintEnd_toEndOf="@+id/editTextSelectServer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextSelectServer" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/connectButton"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/connectButton"
        app:layout_constraintTop_toBottomOf="@+id/editTextPort" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/automatic_gps"
        android:textColor="#4DBCED"
        android:textStyle="bold"
        android:checked="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/connectButton"
        app:layout_constraintStart_toStartOf="@+id/connectButton"
        app:layout_constraintTop_toBottomOf="@+id/connectButton"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


    <Button
        android:id="@+id/buttonDisconnect"
        android:onClick="disconnectClicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/disconnect"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/editTextPort"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/editTextPort"
        app:layout_constraintTop_toBottomOf="@+id/editTextPort" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>